@@ -26,6 +26,7 @@
 
 == Feedback
 
+- skrd - https://github.com/skrd - "/10 * * * *" cron issue
 - Hongli Lai - Scheduler#stop(:terminate => true) request
 - Tero Tilus - raises on unsupported/unknown options
 - Louis Coilliot - Scheduler#running_jobs
