@@ -7,6 +7,11 @@
 - complete rewrite.
 
 
+== rufus-scheduler - 2.0.22    released 2013/07/16
+
+- parse "/10 * * * *" again (like <= 2.0.19 did), thanks @skrd
+
+
 == rufus-scheduler - 2.0.21    released 2013/07/15
 
 - add license (MIT) to gemspec file
